Added the topbar and button components, react router working (partially)

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,4 +1,4 @@
-body {
-  background: blue;
-  color: yellow;
-}
+@import './vars';
+
+@import '../components/TopBar/style';
+@import '../components/Button/style';
