--- a/app/components/TopBar/style.scss
+++ b/app/components/TopBar/style.scss
@@ -12,13 +12,20 @@
     justify-content: center;
     align-items: center;
     float: left;
+    img {
+      margin: 3rem;
+    }
   }
 
   .topbar-elements-container {
     height: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: center; 
+    a {
+      width: 7rem;
+      text-align: center;
+    }
   }
 
   .get-quote-wrapper {
@@ -27,5 +34,8 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
+    button {
+      margin: 3rem;
+    }
   }
 }
