updates for the icon component

--- a/app/components/Button/style.scss
+++ b/app/components/Button/style.scss
@@ -3,6 +3,7 @@
 .mp--button {
   height: 45px;
   width: 175px;
+  font-family: $site-font-family;
   &.small {
     height: 35px;
     width: 145px;
@@ -26,5 +27,12 @@
     //pointer-events: none;
     cursor: not-allowed;
   }
+}
+
+.mp--button:hover {
+  cursor: pointer;
+}
+.mp--button:active {
+  transform: scale(0.99);
 }
 
