--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,4 +1,7 @@
 @import './vars';
 
+@import './global';
+
 @import '../components/TopBar/style';
 @import '../components/Button/style';
+@import '../components/Icon/style';
