--- a/app/components/TopBar/style.scss
+++ b/app/components/TopBar/style.scss
@@ -1,10 +1,17 @@
 .mp--topbar {
   display: flex;
+  justify-content: center;
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
   height: 150px;
+  background: transparent;
+  &--inner {
+    max-width: $site-max-width;
+    width: 100%;
+    display: flex;
+  }
 
   .logo-container {
     height: 100%;
@@ -25,6 +32,21 @@
     a {
       width: 7rem;
       text-align: center;
+      text-decoration: none;
+      color: $neutral;
+    }
+    a:hover {
+      text-decoration: underline;
+      color: $dark-blue;
+    }
+    a:active {
+      text-decoration: underline;
+      color: $dark-blue;
+    }
+
+    .active {
+      text-decoration: underline;
+      color: $dark-blue;
     }
   }
 
