--- a/app/components/TopBar/style.scss
+++ b/app/components/TopBar/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 150px;
