--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,6 +1,6 @@
 @import './vars';
 
-@import 'global_settings';
+@import 'global_styles';
 
 @import '../components/TopBar/style';
 @import '../components/Button/style';
