--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -6,3 +6,5 @@ $neutral: #5B5E66;
 
 $site-max-width: 1440px;
 $site-font-family: 'Noto Sans JP', sans-serif;
+
+$top-bar-offset-height__large: 150px;
