--- a/app/scss/global_styles.scss
+++ b/app/scss/global_styles.scss
@@ -1,3 +1,14 @@
 body {
   font-family: $site-font-family;
+  margin: 0;
+}
+
+.mp--main-container {
+  padding-top: 150px;
+  display: flex;
+  justify-content: center;
+  &--inner {
+    width: 100%;
+    max-width: $site-max-width;
+  }
 }
