--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -7,4 +7,8 @@ $neutral: #5B5E66;
 $site-max-width: 1440px;
 $site-font-family: 'Noto Sans JP', sans-serif;
 
+$small: 450px;
+$medium: 768px;
+$large: 1600px;
+
 $top-bar-offset-height__large: 150px;
