updates for the homepage - bg curve

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -5,3 +5,5 @@
 @import '../components/TopBar/style';
 @import '../components/Button/style';
 @import '../components/Icon/style';
+
+@import '../pages/HomePage/style';
