--- a/app/scss/global_styles.scss
+++ b/app/scss/global_styles.scss
@@ -4,12 +4,16 @@ body {
 }
 
 .mp--main-container {
-  padding-top: 150px;
+  //padding-top: 150px;
   display: flex;
   justify-content: center;
   &--inner {
     width: 100%;
     max-width: $site-max-width;
     margin: 0 auto;
+  }
+
+  main {
+    width: 100%;
   }
 }
