--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -6,5 +6,6 @@
 @import '../components/TopBar/style';
 @import '../components/Button/style';
 @import '../components/Icon/style';
+@import '../components/Footer/style';
 
 @import '../pages/HomePage/style';
