--- a/app/pages/HomePage/style.scss
+++ b/app/pages/HomePage/style.scss
@@ -73,5 +73,25 @@
       padding: 3rem 0;
       color: white;
     }
+
+    .service-info-item-container {
+      .service-info-img-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .service-info-description {
+        height: 260px;
+        color: white;
+        .title {
+          font-size: 2.1rem;
+          margin-top: 3rem;
+        }
+        .text {
+          margin-top: 1.3rem;
+          font-size: 1.1rem;
+        }
+      }
+    }
   }
 }
