tests for footer

--- a/app/components/Footer/style.scss
+++ b/app/components/Footer/style.scss
@@ -50,6 +50,7 @@
     }
     .footer-address {
       line-height: 1.7;
+      padding: 1rem 0;
       @media only screen and (max-width: $medium) {
         text-align: center;
       }
