--- a/css/vars.css
+++ b/css/vars.css
@@ -4,4 +4,6 @@
     --blue-grey: #7F8595;
     --light-periwinkle: #DDE1EC;
     --neutral: #5B5E66;
+
+    --swiper-theme-color: white !important;
 }
