--- a/app/pages/HomePage/style.scss
+++ b/app/pages/HomePage/style.scss
@@ -72,6 +72,11 @@
       text-align: center;
       padding: 3rem 0;
       color: white;
+      font-size: 1.5rem;
+      @media only screen and (max-width: $medium) {
+        font-size: 1.2rem;
+        padding: 3rem 0 1rem;
+      }
     }
 
     .service-info-item-container {
@@ -91,6 +96,40 @@
           margin-top: 1.3rem;
           font-size: 1.1rem;
         }
+      }
+
+      &__mobile {
+        height: 397px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: white;
+        max-width: 285px;
+        border: 1px solid white;
+        margin: 2rem auto;
+        padding: 0 1rem;
+        .service-info-img-wrapper {
+          margin-top: 3rem;
+          img {
+            max-height: 110px;
+          }
+        }
+        .service-info-description {
+          .title {
+            font-size: 1.5rem;
+            margin: 1rem 0;
+            text-align: center;
+          }
+          .text {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+
+    .swiper-container {
+      .swiper-pagination-bullets {
+        bottom: 50px;
       }
     }
   }
