--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -11,4 +11,5 @@ $small: 450px;
 $medium: 960px;
 $large: 1600px;
 
-$top-bar-offset-height__large: 140px;
+$top-bar-height__large: 140px;
+$top-bar-height__small: 90px;
