--- a/app/pages/HomePage/style.scss
+++ b/app/pages/HomePage/style.scss
@@ -89,12 +89,12 @@
         height: 260px;
         color: white;
         .title {
-          font-size: 2.1rem;
+          font-size: 1.8rem;
           margin-top: 3rem;
         }
         .text {
           margin-top: 1.3rem;
-          font-size: 1.1rem;
+          line-height: 1.8;
         }
       }
 
@@ -130,6 +130,26 @@
     .swiper-container {
       .swiper-pagination-bullets {
         bottom: 50px;
+      }
+    }
+  }
+
+  .mp--homepage--third-section {
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    span {
+      font-size: 1.8rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    @media only screen and (max-width: $medium) {
+      height: 200px;
+      span {
+        font-size: 1.4rem;
+        margin-bottom: 0.9rem;
       }
     }
   }
