--- a/app/scss/global_styles.scss
+++ b/app/scss/global_styles.scss
@@ -16,4 +16,11 @@ body {
   main {
     width: 100%;
   }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 2rem;
+    @media only screen and (max-width: $medium) {
+      text-align: center;
+    }
+  }
 }
