about us page should be done with a snapshot test added in

--- a/app/pages/AboutUsPage/style.scss
+++ b/app/pages/AboutUsPage/style.scss
@@ -1,4 +1,12 @@
 .mp--about-us-page-container {
+  h2 {
+    margin-bottom: 0.5rem;
+  }
+  .mp--page-title {
+    h1 {
+      margin-left: 3rem;
+    }
+  }
   margin-top: $top-bar-height__large;
   @media only screen and (max-width: $medium) {
     margin-top: $top-bar-height__small;
@@ -37,10 +45,47 @@
 
   .mp--our-process-container {
     background: var(--navy-blue);
-    .arrow-wrapper__desktop {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    color: white;
+    width: 100%;
+    padding-bottom: 4rem;
+    .container-title {
+      margin: 2.5rem 0;
+    }
+    .process-info-row {
+      padding: 0 5rem;
+      min-height: 150px;
+      @include breakpoint(small down) {
+        padding: 0 3rem;
+      }
+      .arrow-wrapper__desktop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+    }
+
+    .process-info-wrapper {
+      color: white;
+      max-width: 350px;
+      h2, p {
+        text-align: center;
+      }
+      .arrow-wrapper__mobile {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+        img {
+          margin: 0 auto;
+        }
+      }
+    }
+    .process-info-item-wrapper {
+      @include breakpoint(medium down) {
+        margin: 0 auto;
+      }
     }
   }
 }
