--- a/app/scss/global_styles.scss
+++ b/app/scss/global_styles.scss
@@ -1,6 +1,11 @@
 body {
   font-family: $site-font-family;
   margin: 0;
+  &.home-page {
+    .bm-burger-bars {
+      background: white !important;
+    }
+  }
 }
 
 .mp--main-container {
