--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -13,3 +13,6 @@ $large: 1600px;
 
 $top-bar-height__large: 140px;
 $top-bar-height__small: 90px;
+
+$page-container-top-margin__large: 160px;
+$page-container-top-margin__small: 100px;
