added a couple small tested components and the basic elements for the contact page

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -7,6 +7,9 @@
 @import '../components/Button/style';
 @import '../components/Icon/style';
 @import '../components/Footer/style';
+@import '../components/PageHeader/style';
+@import '../components/MoreInfoComposer/style';
 
 @import '../pages/HomePage/style';
 @import '../pages/AboutUsPage/style';
+@import '../pages/ContactPage/style';
