--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -9,6 +9,7 @@
 @import '../components/Footer/style';
 @import '../components/PageHeader/style';
 @import '../components/MoreInfoComposer/style';
+@import '../components/InputComposer/style';
 
 @import '../pages/HomePage/style';
 @import '../pages/AboutUsPage/style';
