--- a/app/pages/ContactPage/style.scss
+++ b/app/pages/ContactPage/style.scss
@@ -6,5 +6,20 @@
 
   .company-address-wrapper {
     font-size: 1.1rem;
+    margin-bottom: 2rem;
+  }
+
+  .contact-form-title {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .send-message-button-wrapper {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+    button {
+      margin: 1.5rem auto;
+    }
   }
 }
