added in tests for the input composer component

--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -4,6 +4,8 @@ $blue-grey: var(--blue-grey, #7F8595);
 $light-periwinkle: var(--light-periwinkle, #DDE1EC);
 $neutral: var(--neutral, #5B5E66);
 
+$danger: #b40505;
+
 $site-max-width: 1440px;
 $site-font-family: 'Noto Sans JP', sans-serif;
 
