--- a/app/components/InputComposer/style.scss
+++ b/app/components/InputComposer/style.scss
@@ -6,9 +6,6 @@
   transition: all 0.2s ease;
   outline: none;
   font-family: $site-font-family;
-  &.error {
-    border: 2px solid darkred;
-  }
   &:hover {
     border: 2px solid var(--navy-blue);
   }
@@ -24,9 +21,17 @@
   margin: 1rem 0;
   display: flex;
   flex-direction: column;
+  &.error {
+    input, textarea {
+      border: 2px solid $danger;
+    }
+  }
   span {
     margin: 0.8rem 0;
     width: 100%
+  }
+  .error-message {
+    color: $danger;
   }
   input {
     height: 50px;
