updates on the work page

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -14,3 +14,4 @@
 @import '../pages/HomePage/style';
 @import '../pages/AboutUsPage/style';
 @import '../pages/ContactPage/style';
+@import '../pages/WorkPage/style';
