--- a/app/scss/global_styles.scss
+++ b/app/scss/global_styles.scss
@@ -5,6 +5,15 @@ body {
     .bm-burger-bars {
       background: white !important;
     }
+    .mp--main-container {
+      main {
+        width: 100%;
+        margin-top: 0;
+        @include breakpoint(small down) {
+          margin-top: 0;
+        }
+      }
+    }
   }
 }
 
@@ -20,6 +29,10 @@ body {
 
   main {
     width: 100%;
+    margin-top: $page-container-top-margin__large;
+    @include breakpoint(small down) {
+      margin-top: $page-container-top-margin__small;
+    }
   }
 
   h1, h2, h3, h4, h5, h6 {
