Several changes; addition of the work page and the services page with their snapshots and other updated snapshots

--- a/app/components/PageHeader/style.scss
+++ b/app/components/PageHeader/style.scss
@@ -1,11 +1,15 @@
 .mp--page-header {
   width: 100%;
   h1 {
-    text-align: center;
     text-decoration: underline;
     margin-bottom: 4rem;
     @include breakpoint(small down) {
       margin-bottom: 2rem;
+    }
+  }
+  &.centered {
+    h1 {
+      text-align: center;
     }
   }
 }
