--- a/app/components/TopBar/style.scss
+++ b/app/components/TopBar/style.scss
@@ -39,7 +39,7 @@
   .logo-container {
     height: 100%;
     display: flex;
-    justify-content: center;
+    //justify-content: center;
     align-items: center;
     float: left;
     img {
