--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -15,3 +15,4 @@
 @import '../pages/AboutUsPage/style';
 @import '../pages/ContactPage/style';
 @import '../pages/WorkPage/style';
+@import '../pages/ServicesPage/style';
